# mcp-poc

./: .gitignore  README.md  mlflow.db  pyproject.toml
docs/superpowers/plans/: 2026-04-07-mcp-poc.md
docs/superpowers/specs/: 2026-04-07-mcp-poc-design.md
scenario_1_chain/: main.py
scenario_2_agent/: main.py
scenario_3_mcp/: client.py  server.py
scenario_4_langgraph/: graph.py  main.py  nodes.py
shared/: __init__.py  ingest_arxiv.py  llm.py  questions.py  rag.py
